<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/some_id"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clipToOutline="true"
    android:background="@drawable/main_login_test">

    <View
        android:id="@+id/logo"
        android:layout_width="490px"
        android:layout_height="505px"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="293px"
        android:layout_alignParentTop="true"
        android:layout_marginTop="379px"
        android:background="@drawable/mjc_logo"
        />

    <TextView
        android:id="@+id/haktext"
        android:layout_width="118.96px"
        android:layout_height="73.06px"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="143px"
        android:layout_marginTop="926px"
        android:gravity="center_vertical"
        android:text="@string/text_hak"
        android:textAppearance="@style/some_id" />

    <EditText
        android:id="@+id/Login_num"
        android:layout_width="794px"
        android:layout_height="120px"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="1013px"
        android:layout_marginRight="54dp"
        android:background="@drawable/edit_id"
        android:hint="학번을 입력해주세요."
        android:paddingLeft="27px"
        android:textColor="@color/black"
        android:textSize="36px" />

    <TextView
        android:id="@+id/passtext"
        android:layout_width="198.83px"
        android:layout_height="73.06px"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="143px"
        android:layout_marginTop="1180px"
        android:gravity="center_vertical"
        android:text="@string/text_pass"
        android:textAppearance="@style/some_id" />

    <EditText
        android:id="@+id/pas_num"
        android:layout_width="794px"
        android:layout_height="120px"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="1267px"
        android:layout_marginRight="54dp"
        android:background="@drawable/edit_id"
        android:hint="비밀번호를 입력해주세요."
        android:paddingLeft="27px"
        android:textColor="@color/black"
        android:textSize="36px" />

    <CheckBox
        android:id="@+id/check_login"
        android:layout_width="37.47px"
        android:layout_height="37.47px"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="143px"
        android:layout_marginTop="1448px" />

    <TextView
        android:id="@+id/text_autologin"
        android:layout_width="185px"
        android:layout_height="47px"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="192.25px"
        android:layout_marginTop="1442px"
        android:gravity="center_vertical"
        android:text="@string/auto_text_main"
        android:textAppearance="@style/main_auto" />

    <android.widget.Button
        android:id="@+id/login_btn"
        android:layout_width="794px"
        android:layout_height="120px"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="143px"
        android:layout_marginTop="580dp"
        android:background="@drawable/login_btn_design"
        android:text="@string/login_btn_text"
        android:textColor="#999999" />
</RelativeLayout>