<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToOutline="true"
    android:background="@drawable/main_login_test">

    <View
        android:id="@+id/main_screen_logo"
        android:layout_width="101.25px"
        android:layout_height="104.37px"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="272px"
        android:layout_marginTop="53px"
        android:background="@drawable/mjc_logo" />

    <TextView
        android:id="@+id/main_title_text"
        android:layout_width="398.25px"
        android:layout_height="93.94px"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="151dp"
        android:layout_marginTop="22dp"
        android:gravity="center_vertical"
        android:text="@string/main_title_string"
        android:textAppearance="@style/main_title_styles"
        android:textStyle="bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_top_view"
        android:layout_width="932px"
        android:layout_height="222px"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="75px"
        android:layout_marginTop="266px"
        android:background="@drawable/main_top_view_background"
        android:elevation="30dp">

        <TextView
            android:id="@+id/top_info"
            android:layout_width="350px"
            android:layout_height="67px"
            android:layout_marginStart="129px"
            android:layout_marginTop="26px"
            android:gravity="bottom"
            android:text="@string/top_info"
            android:textAppearance="@style/top_info"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.widget.Button
            android:id="@+id/logout_btn"
            android:layout_width="326px"
            android:layout_height="63px"
            android:layout_marginStart="94px"
            android:layout_marginTop="136px"
            android:background="@drawable/main_top"
            android:elevation="100dp"
            android:text="@string/top_logout_btn"
            android:textAppearance="@style/top_logout_btn"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.widget.Button
            android:id="@+id/passwd_change_btn"
            android:layout_width="326px"
            android:layout_height="63px"
            android:layout_marginTop="136px"
            android:layout_marginEnd="94px"
            android:background="@drawable/main_top"
            android:elevation="100dp"
            android:text="@string/top_passwd_change_btn"
            android:textAppearance="@style/top_passwd_change_btn"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/announcement_view"
        android:layout_width="932px"
        android:layout_height="347px"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="75px"
        android:layout_marginTop="551px"
        android:background="@drawable/main_top_view_background"
        android:elevation="30dp">

        <TextView
            android:id="@+id/ann_text"
            android:layout_width="226px"
            android:layout_height="33px"
            android:layout_marginStart="109px"
            android:layout_marginTop="30px"
            android:gravity="bottom"
            android:text="공지사항"
            android:textAppearance="@style/top_passwd_change_btn"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/draw_line1"
            android:layout_width="837px"
            android:layout_height="5px"
            android:layout_marginStart="47px"
            android:layout_marginTop="76px"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/broken_line"
            android:layerType="software"/>

        <TextView
            android:id="@+id/first_ann"
            android:layout_width="871px"
            android:layout_height="75px"
            android:layout_marginStart="45px"
            android:layout_marginTop="77px"
            android:text="[혁신] 2023학년도 1학기 학습역량 진단검사 실시 안내(~5/5)"
            android:layout_gravity="center"
            android:textAppearance="@style/ann_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />




    </androidx.constraintlayout.widget.ConstraintLayout>



</RelativeLayout>